--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     <h1>Coco</h1>
 
-
+    <video src="video/trailer.mp4" controls></video>
 
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
