grid, video css

--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
 
     <video src="video/trailer.mp4" controls></video>
 
+    <main>
+        <section class="a">Miguel Rivera</section>
+        <section class="b">Hector</section>
+        <section class="c">Ernesto de la Cruz</section>
+        <section class="d">Abuelita</section>
+        <section class="e">Mama Coco</section>
+        <section class="f">Imelda</section>
+    </main>
+    
+
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Plugins -->
