Added social media links.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <li><a href="#section-1" class="js-anchor-link">Watch Trailer</a></li>
     <li><a href="#section-2" class="js-anchor-link">About the Film</a></li>
     <li><a href="#section-3" class="js-anchor-link">Cast</a></li>
+    <ul class="horizontal-list">
+        <li><a href="https://twitter.com/quietplacemovie?lang=en"><img id="twitter" src="http://www.stickpng.com/assets/images/580b57fcd9996e24bc43c53e.png" alt="Twitter logo"></a></li>
+        <li><a href="https://www.instagram.com/aquietplacemovie/?hl=en"><img id="instagram" src="http://pluspng.com/img-png/instagram-png-instagram-png-logo-1455.png" alt="Instagram logo"></a></li>
+        <li><a href="https://www.facebook.com/AQuietPlaceMovie/"><img id="facebook" src="https://www.sccpre.cat/mypng/full/1-12925_facebook-logo-png-transparent-vector-facebook-logo-transparent.png" alt="Facebook logo"></a></li>
+    </ul>
 </ul>
 
 <!-- TRAILER -->
